WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218350
REGRESSION (
r269146
): ASSERTION FAILED: didNeedLayout || logicalHeight() == oldHeight in WebCore::RenderBlockFlow::ensureLineBoxes
https://bugs.webkit.org/show_bug.cgi?id=218350
Summary
REGRESSION (r269146): ASSERTION FAILED: didNeedLayout || logicalHeight() == o...
Ryan Haddad
Reported
2020-10-29 13:17:44 PDT
The following three API tests are failing an assertion on iOS Debug bots: TestWebKitAPI.DragAndDropTests.LinkToInput TestWebKitAPI.DragAndDropTests.BackgroundImageLinkToInput TestWebKitAPI.DragAndDropTests.ImageInLinkToInput ASSERTION FAILED: didNeedLayout || logicalHeight() == oldHeight ./rendering/RenderBlockFlow.cpp(3689) : void WebCore::RenderBlockFlow::ensureLineBoxes() 1 0x586f375a9 WTFCrash 2 0x58ed18b2b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x59321fad9 WebCore::RenderBlockFlow::ensureLineBoxes() 4 0x591c0fbfa WebCore::Position::ensureLineBoxes() const 5 0x591dd1a64 WebCore::RenderedPosition::RenderedPosition(WebCore::Position const&, WebCore::Affinity) 6 0x591dd1bab WebCore::RenderedPosition::RenderedPosition(WebCore::Position const&, WebCore::Affinity) 7 0x591dd1b66 WebCore::RenderedPosition::RenderedPosition(WebCore::VisiblePosition const&) 8 0x591e4d197 WebCore::startPositionForLine(WebCore::VisiblePosition const&, WebCore::LineEndpointComputationMode) 9 0x591e3c7c0 WebCore::startOfLine(WebCore::VisiblePosition const&, WebCore::LineEndpointComputationMode, bool*) 10 0x591e3717a WebCore::startOfLine(WebCore::VisiblePosition const&) 11 0x591e30ee0 WebCore::inSameLine(WebCore::VisiblePosition const&, WebCore::VisiblePosition const&) 12 0x591e30872 WebCore::VisiblePosition::VisiblePosition(WebCore::Position const&, WebCore::Affinity) 13 0x591e30f7b WebCore::VisiblePosition::VisiblePosition(WebCore::Position const&, WebCore::Affinity) 14 0x591e3c3b4 WebCore::nextBoundary(WebCore::VisiblePosition const&, unsigned int (*)(WTF::StringView, unsigned int, WebCore::BoundarySearchContextAvailability, bool&)) 15 0x591e3c5b0 WebCore::nextWordPosition(WebCore::VisiblePosition const&) 16 0x591d77700 WebCore::Editor::updateMarkersForWordsAffectedByEditing(bool) 17 0x591d773af WebCore::Editor::respondToChangedContents(WebCore::VisibleSelection const&) 18 0x591d7a79c WebCore::Editor::appliedEditing(WebCore::CompositeEditCommand&) 19 0x591d316a3 WebCore::CompositeEditCommand::didApplyCommand() 20 0x591d1e9d5 WebCore::CompositeEditCommand::apply() 21 0x59291fb57 WebCore::DragController::concludeEditDrag(WebCore::DragData const&) 22 0x59291e2d0 WebCore::DragController::performDragOperation(WebCore::DragData const&) 23 0x571bed88a WebKit::WebPage::performDragControllerAction(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&) 24 0x571cd50ce void IPC::callMemberFunctionImpl<WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&), std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>, 0ul, 1ul, 2ul, 3ul>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&), std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul>) 25 0x571cd2b20 void IPC::callMemberFunction<WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&), std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul> >(std::__1::tuple<WebKit::DragControllerAction, WebCore::DragData, WebKit::SandboxExtension::Handle, WebKit::SandboxExtension::HandleArray>&&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&)) 26 0x571c5900e void IPC::handleMessage<Messages::WebPage::PerformDragControllerAction, WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&)>(IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::DragControllerAction, WebCore::DragData const&, WebKit::SandboxExtension::Handle&&, WebKit::SandboxExtension::HandleArray&&)) 27 0x571c4cca4 WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) 28 0x571bf0da2 WebKit::WebPage::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 29 0x57050ed31 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 30 0x5716f6c77 WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 31 0x57012304a IPC::Connection::dispatchMessage(IPC::Decoder&)
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.DragAndDropTests.LinkToInput&test=TestWebKitAPI.DragAndDropTests.BackgroundImageLinkToInput&test=TestWebKitAPI.DragAndDropTests.ImageInLinkToInput
Attachments
patch
(2.80 KB, patch)
2020-10-30 06:27 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-10-29 13:18:32 PDT
<
rdar://problem/70822708
>
Ryan Haddad
Comment 2
2020-10-29 13:19:19 PDT
Test history suggests that this started with
https://trac.webkit.org/changeset/269146/webkit
Antti Koivisto
Comment 3
2020-10-30 06:27:27 PDT
Created
attachment 412735
[details]
patch
EWS
Comment 4
2020-10-30 09:04:29 PDT
Committed
r269188
: <
https://trac.webkit.org/changeset/269188
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412735
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug