REGRESSION (r269146): ASSERTION FAILED: didNeedLayout || logicalHeight() == oldHeight in WebCore::RenderBlockFlow::ensureLineBoxes https://bugs.webkit.org/show_bug.cgi?id=218350 <rdar://problem/70822708>

Reviewed by Zalan Bujtas.

Dropping of ensureLineBoxes call revealed a bug in text control style updates.

RenderTextControlSingleLine mutates style of the innerTextElement() renderer by altering the height property.
On style update this mutation is lost which causes ensureLineBoxes for innerTextElement() to miscompute block height
if RenderTextControlSingleLine layout has not happened before.

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::styleDidChange):

Don't zero the dimension properties of the innerTextElement() unnecessarily. Instead see of the underlying style has
actually changed and set the style only in that case. That will then trigger layout as needed.


Canonical link: https://commits.webkit.org/231060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269188 268f45cc-cd09-0410-ab3c-d52691b4dbfc